# Rust

./: .gitignore  README.md
tp0/: Cargo.toml
tp0/src/: main.rs
tp0_tokio/: Cargo.toml
tp0_tokio/src/: main.rs
tp1/: Cargo.toml
tp1/src/: main.rs
tp2_file_manager/: Cargo.toml
tp2_file_manager/src/: main.rs
tp3_journalisation/: Cargo.toml
tp3_journalisation/src/: main.rs
tp7/: Cargo.toml
tp7/src/: client.rs  server.rs
tp8/: Cargo.toml
tp8/src/: client.rs  server.rs
tp9/: Cargo.toml
tp9/src/: client.rs  server.rs
