[package]
name = "tp8"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "protocol_server"
path = "src/server.rs"

[[bin]]
name = "protocol_client"
path = "src/client.rs"