[package]
name = "tp9"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }

[[bin]]
name = "websocket_server"
path = "src/server.rs"

[[bin]]
name = "websocket_client"
path = "src/client.rs"